tests/negative/neg_case_range_choice.safe
-- Test: neg_case_range_choice
-- Description: Range choices are outside the PR11.2 case subset.
-- Expected: REJECT unsupported_source_construct

package Neg_Case_Range_Choice is

   function Classify (Value : in Integer) returns Integer is
   begin
      case Value is
         when 1 to 3 then
            return 1;
         end when;
         when others then
            return 0;
         end when;
      end case;
   end Classify;

end Neg_Case_Range_Choice;
